reworked contact me

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
         <div class="nav-wrapper">
             <button class="switch-theme" id="switch-theme-btn">
-
             </button>
-
             <nav class="top-nav">
                 <ul>
                     <li>
@@ -37,13 +35,15 @@
                 A Programmer & Cybersecurity Enthusiast.
             </h2>
             <p class="tagline">
-                I am <span id="age"></span> years old and enjoy
-                Cybersecurity, robotics, and app development. I have been
+                I am <span id="age"></span> years old and have been
+                programming for <span id="yearsProgramming"></span> years. I enjoy
+                Cybersecurity, robotics, and backend development. I have been
                 programming for <span id="yearsProgramming"></span> years.
             </p>
 
-            <!-- Contact Me Button -->
+            <div class="wrap">
             <button id="contactBtn" class="btn">Contact Me</button>
+            </div>
         </section>
 
         <!-- The Modal -->
