updates added - need to add jekyll

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Frank Trani's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="script.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
@@ -41,8 +42,56 @@
                 programming for <span id="yearsProgramming"></span> years.
             </p>
 
+            <div class="menu">
+                <div class="btn trigger">
+                    <span class="line"></span>
+                </div>
+                <div class="icons">
+                    <div class="rotater">
+                        <div class="btn btn-icon">
+                            <i class="fa fa-codepen"></i>
+                        </div>
+                    </div>
+                    <div class="rotater">
+                        <div class="btn btn-icon">
+                            <i class="fa fa-facebook"></i>
+                        </div>
+                    </div>
+                    <div class="rotater">
+                        <div class="btn btn-icon">
+                            <i class="fa fa-google-plus"></i>
+                        </div>
+                    </div>
+                    <div class="rotater">
+                        <div class="btn btn-icon">
+                            <i class="fa fa-twitter"></i>
+                        </div>
+                    </div>
+                    <div class="rotater">
+                        <div class="btn btn-icon">
+                            <i class="fa fa-dribbble"></i>
+                        </div>
+                    </div>
+                    <div class="rotater">
+                        <div class="btn btn-icon">
+                            <i class="fa fa-linkedin"></i>
+                        </div>
+                    </div>
+                    <div class="rotater">
+                        <div class="btn btn-icon">
+                            <i class="fa fa-github"></i>
+                        </div>
+                    </div>
+                    <div class="rotater">
+                        <div class="btn btn-icon">
+                            <i class="fa fa-behance"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="wrap">
-            <button id="contactBtn" class="btn">Contact Me</button>
+                <button id="contactBtn" class="btn">Contact Me</button>
             </div>
         </section>
 
