--- a/about-me.html
+++ b/about-me.html
@@ -5,27 +5,29 @@ permalink: /about-me/
 ---
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frank Trani's Portfolio</title>
     <link
       rel="stylesheet"
       type="text/css"
       href="{{ '/scripts/styles.css' | relative_url }}"
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <script src="{{ '/scripts/script.js' | relative_url }}" defer></script>
-
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
 
   <body>
     <header>
       <div class="nav-wrapper">
+        <div class="title-wrapper">
+          <h2 class="title2">Frank Trani</h2>
+        </div>
         <button class="switch-theme" id="switch-theme-btn"></button>
 
         <button class="hamburger" id="hamburger-btn">
