--- a/index.html
+++ b/index.html
@@ -18,35 +18,37 @@ permalink: /
     <script src="scripts/script.js"></script>
   </head>
 
-    <body>
-      <header>
-  
-        <div class="nav-wrapper">
-          <button class="switch-theme" id="switch-theme-btn"></button>
-  
-          <button class="hamburger" id="hamburger-btn">
-            <i class="fas fa-bars"></i>
-          </button>
-  
-          <nav class="top-nav">
-            <ul>
-              <li><a href="{{ '/' | relative_url }}" class="active">Home</a></li>
-              <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
-              <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
-              <li><a href="{{ '/blog/' | relative_url }}" >Blog</a></li>
-            </ul>
-          </nav>
-  
-          <nav class="fullscreen-nav" id="fullscreen-nav">
-            <ul>
-              <li><a href="{{ '/' | relative_url }}">Home</a></li>
-              <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
-              <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
-              <li><a href="{{ '/blog/' | relative_url }}" >Blog</a></li>
-            </ul>
-          </nav>
+  <body>
+    <header>
+      <div class="nav-wrapper">
+        <div class="title-wrapper">
+          <h2 class="title2">Frank Trani</h2>
         </div>
-      </header>
+        <button class="switch-theme" id="switch-theme-btn"></button>
+
+        <button class="hamburger" id="hamburger-btn">
+          <i class="fas fa-bars"></i>
+        </button>
+
+        <nav class="top-nav">
+          <ul>
+            <li><a href="{{ '/' | relative_url }}" class="active">Home</a></li>
+            <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
+            <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
+            <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
+          </ul>
+        </nav>
+
+        <nav class="fullscreen-nav" id="fullscreen-nav">
+          <ul>
+            <li><a href="{{ '/' | relative_url }}">Home</a></li>
+            <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
+            <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
+            <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
     <main class="container">
       <section class="intro">
