--- a/bin.html
+++ b/bin.html
@@ -154,7 +154,7 @@ permalink: /binary
         <input
           type="text"
           id="text"
-          placeholder="Enter Text (A)"
+          placeholder="Enter Text (ASCII)"
           oninput="convertFromText()"
         />
         <button onclick="copyToClipboard('text')">Copy</button>
