--- a/bin.html
+++ b/bin.html
@@ -108,7 +108,7 @@ permalink: /binary
   </script>
 </head>
 <body>
-  <div class="container">
+  <div class="bin-container">
     <h1>Number and Text Converter</h1>
 
     <div class="converter">
