updated and fixed formatting on blog

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@ permalink: /blog/
     <input
       type="text"
       id="search-input"
-      placeholder="Search by title or tag..."
+      placeholder="Search by title or category..."
     />
   </div>
 
