fixed resume link

--- a/index.html
+++ b/index.html
@@ -94,5 +94,15 @@ permalink: /
         >View on GitHub</a
       >
     </div>
+    <div class="project-card">
+      <h3>Dotfiles</h3>
+      <p>dotfiles for Arch Linux</p>
+      <a
+        href="https://github.com/FrankTrani/dotfiles"
+        target="_blank"
+        class="project-link"
+        >View on GitHub</a
+      >
+    </div>
   </div>
 </section>
