--- a/links.html
+++ b/links.html
@@ -61,7 +61,7 @@ permalink: /links/
       />
       <h3>Resume</h3>
       <a
-        href="{{ '/Resume - Google Docs.pdf' | relative_url }}"
+        href="{{ '/logos/Resume.pdf' | relative_url }}"
         target="_blank"
         class="link-button"
         >View</a
