--- a/tools.html
+++ b/tools.html
@@ -15,13 +15,13 @@ permalink: /tools/
       <a href="/binary">Binary Converter</a>
     </div>
     <div class="tool-card">
-      <a href="">Cool</a>
+      <a href="/pascals-triangle/">Pascals Triangle</a>
     </div>
     <div class="tool-card">
-      <a href="">Cool</a>
+      <a href="/convert/">Image Converter</a>
     </div>
     <div class="tool-card">
-      <a href="">Cool</a>
+      <a href="/math-tools/">Math Tools</a>
     </div>
   </div>
 </section>
